--- a/package.json
+++ b/package.json
@@ -16,9 +16,9 @@
     "http-errors": "~1.6.3",
     "morgan": "~1.9.1",
     "per-env": "^1.0.2",
-    "pg": "^8.4.2",
-    "pug": "2.0.4",
-    "sequelize": "^5.22.3",
+    "pg": "^8.5.1",
+    "pug": "^3.0.2",
+    "sequelize": "^5.22.4",
     "sequelize-cli": "^5.5.1"
   },
   "devDependencies": {
