--- a/package.json
+++ b/package.json
@@ -13,8 +13,11 @@
     "cookie-parser": "~1.4.4",
     "debug": "~2.6.9",
     "express": "~4.16.1",
+    "express-bearer-token": "^2.4.0",
     "express-session": "^1.17.1",
+    "express-validator": "^6.10.0",
     "http-errors": "~1.6.3",
+    "jsonwebtoken": "^8.5.1",
     "morgan": "~1.9.1",
     "per-env": "^1.0.2",
     "pg": "^8.5.1",
