--- a/.env.example
+++ b/.env.example
@@ -1,6 +1,6 @@
-PORT=8080
-DB_USERNAME=travel_scape_app
-DB_PASSWORD=annapurna
-DB_DATABASE=travel_scape_development
-DB_HOST=localhost
-SESSION_SECRET=kodakoa
+PORT=<<port>>
+DB_USERNAME=<<username>>
+DB_PASSWORD=<<passord>>
+DB_DATABASE=<<database>>
+DB_HOST=<<host>>
+SESSION_SECRET=<<sessionSecret>>
